# fortinet-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  fortios_client.py  pyproject.toml  s  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
tests/: test_server.py
tools/: __init__.py  firewall.py  generic.py  log.py  monitor.py  router.py  security.py  system.py  user.py  vpn.py  wireless.py
